--- a/.github/workflows/main_webaptest01.yml
+++ b/.github/workflows/main_webaptest01.yml
@@ -25,7 +25,7 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5
 
       - name: Restore NuGet packages
-        run: nuget restore
+        run: nuget.exe restore
 
       - name: Publish to folder
         run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
@@ -63,4 +63,5 @@ jobs:
           app-name: 'webaptest01'
           slot-name: 'Production'
           package: .
+
           
